# equalizer

./: .gitignore
src/: CMakeLists.txt  channelslider.cpp  channelslider.h  main.cpp  mainwindow.cpp  mainwindow.h  pa-channel.h  pa-equalizer.cpp  pa-equalizer.h  pa-exception.h
